--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-redux": "^6.0.10",
+    "@types/redux-actions": "^2.3.1",
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.18.0",
+    "immutable": "^4.0.0-rc.12",
     "next": "^7.0.2",
+    "next-redux-wrapper": "^2.0.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "redux-actions": "^2.6.4"
   },
   "devDependencies": {
+    "@types/next-redux-wrapper": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.5.0",
     "typescript": "^3.1.6"
   }
