--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/react-redux": "^6.0.10",
-    "@types/redux-actions": "^2.3.1",
+    "@types/redux-saga": "^0.10.5",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "immutable": "^4.0.0-rc.12",
@@ -21,10 +20,17 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
-    "redux-actions": "^2.6.4"
+    "redux-actions": "^2.6.4",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-saga": "^0.16.2"
   },
   "devDependencies": {
     "@types/next-redux-wrapper": "^2.0.0",
+    "@types/react": "^16.7.11",
+    "@types/react-redux": "^6.0.10",
+    "@types/redux-actions": "^2.3.1",
+    "@types/webpack": "^4.4.20",
+    "@types/webpack-env": "^1.13.6",
     "fork-ts-checker-webpack-plugin": "^0.5.0",
     "typescript": "^3.1.6"
   }
